# localflow

./: .env.example  .gitignore  .mcp.json.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  README.zh-CN.md  localflow_agent_harness_outline.md  localflow_harness_experiment_report.md  localflow_project_review_and_improvement.md  localflow_reference_projects_instruction.md  localflow_v062_review_severity.md  pyproject.toml  sandbox_seed.py
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
app/: cli.py  main.py  runtime_env.py
app/agent/: __init__.py  analysis_planner.py  analysis_prompts.py  client.py  goal_interpreter.py  judge.py  locale_prompts.py  openai_client.py  planner.py  prompts.py  react_prompts.py
app/eval/: __init__.py  report.py  runner.py  schema.py
app/eval/failure_modes/: __init__.py  __main__.py  benchmark.py  schema.py
app/eval/graders/: __init__.py  semantic.py  structural.py  vision.py
app/eval/grounding/: __init__.py  engine.py  schema.py
app/eval/recipe_verifiers/: __init__.py  _registry.py  _schema.py  grounding.py  semantic.py  structural.py
app/harness/: __init__.py  action_validator.py  approval.py  audit.py  checkpoint.py  context.py  control_loop.py  dry_run.py  executor.py  policy_guard.py  react_loop.py  recipe_repair.py  repair_loop.py  rollback.py  sandbox.py  semantic_verifier.py  stage_progress.py  taskgraph_runner.py  trace.py  verifier.py
app/mcp/: __init__.py  _serialize.py  approval.py  catalog.py  client.py  server.py  tools.py
app/memory/: __init__.py  _schema.py  _store.py  naming.py
app/primitives/: __init__.py  _schemas.py  catalog.py  classify_content.py  extract_content.py
app/recipes/: __init__.py  registry.py  router.py
app/schemas/: __init__.py  action.py  analysis.py  approval.py  compute.py  execution.py  plan.py  progress.py  react.py  recipe.py  risk.py  rollback.py  semantic.py  skill.py  source_ledger.py  task.py  taskgraph.py  trace.py  verification.py  workspace.py
app/skills/: __init__.py  _base.py  _contract.py  _loader.py  signing.py
app/skills/agent/: __init__.py  llm_planner.py  planner.py  reporter.py  skill.py  validator.py
app/skills/data_analyzer/: __init__.py  planner.py  reporter.py  skill.py  skill.yaml  validator.py
app/skills/data_reporter/: __init__.py  planner.py  reporter.py  skill.py  skill.yaml  validator.py
app/skills/folder_organizer/: __init__.py  planner.py  reporter.py  skill.py  skill.yaml  validator.py
app/skills/pdf_indexer/: __init__.py  planner.py  reporter.py  skill.py  skill.yaml  validator.py
app/storage/: __init__.py  jsonl_logger.py  run_store.py
app/templates/: __init__.py  _labels.py
app/tools/: __init__.py  _registry.py  agent_server_workspace.py  chart_ops.py  data_analysis.py  data_ops.py  docker_workspace.py  file_ops.py  file_scan.py  hash_ops.py  pdf_ops.py  remote_workspace.py  scratch.py  source_ledger_ops.py  text_ops.py  workspace.py
app/ui/: __init__.py  _autodetect.py  _i18n.py  _layout.py  _sandbox.py  _workspace_backend.py  main.py
assets/: README.md
docs/: AGENT_SERVER.md  ARCHITECTURE.md  CAPABILITIES.md  COMPUTE_ACTION.md  CONFIRMATION_POLICY.md  DEMO_AND_LONGTASK_GUIDE.md  DOCKER_WORKSPACE.md  E2E_TEST_PLAN.md  EVAL.md  HARNESS_OPTIMIZATION_LOG.md  KERNEL_PACKAGE.md  MCP.md  PACK_BUILDER.md  PHASES.md  PHASE_23_PLAN.md  PHASE_25_PLAN.md  PHASE_26_DESIGN.md  PHASE_27_DESIGN.md  PHASE_28_DESIGN.md  PHASE_29_DESIGN.md  PHASE_30_DESIGN.md  PHASE_31_DESIGN.md  PHASE_32_DESIGN.md  PHASE_33_DESIGN.md  PHASE_34_DESIGN.md  PHASE_35_PLAN.md  PHASE_36_DESIGN.md  PHASE_37_DESIGN.md  PHASE_38_DESIGN.md  PROJECT_DIRECTION.md  REACT_LOOP.md  RECIPES.md  REFINE.md  REMOTE_WORKSPACE.md  SECURITY.md  SEMANTIC_VERIFIER.md  TASKGRAPH.md  TESTING_PHASE_17_21.md  UI.md  UI_zh.md  (+4 more)
docs/research/: FEISHU_HARNESS_ENGINEERING_SUMMARY.md  OPENHANDS_HARNESS_STUDY.md
evals/workspace_pack/: task_001_basic_organize.yaml  task_002_compound_chart.yaml  task_003_forbidden_path_blocked.yaml  task_004_forbidden_action_blocked.yaml  task_005_empty_workspace.yaml  task_006_duplicate_files_reported.yaml  task_007_organize_then_chart.yaml  task_010_workspace_pack.yaml  task_011_data_report_pack.yaml  task_012_project_handoff_pack.yaml
examples/: README.md  seed.py
examples/compute_action_pack/: README.md
examples/data_report_pack/: README.md  seed.py
examples/external_skill_example/: README.md  skill.py  skill.yaml  test_contract.py
examples/literature_review_pack/: README.md  demo.tape  seed.py
examples/messy_downloads/: budget.xlsx  lecture_notes.docx  readme.txt  telemetry.csv  todo.md
examples/project_handoff_pack/: README.md  seed.py
examples/research_pack/: README.md  seed.py  workspace_pack.yaml
localflow_kernel/: __init__.py  harness.py  llm.py  react_prompts.py  schemas.py  storage.py  workspace.py
recipes/: data_report_pack.yaml  literature_review_pack.yaml  literature_review_pack_nogate.yaml  project_handoff_pack.yaml  research_pack.yaml
tests/: conftest.py  test_action_trace_event.py  test_action_trace_event_emission.py  test_agent_integration.py  test_agent_server_bundle.py  test_agent_server_e2e.py  test_agent_server_protocol.py  test_agent_skill.py  test_analysis_planner.py  test_autodetect_data_routing.py  test_bilingual_reports.py  test_chart_kinds.py  test_cli_memory.py  test_cli_repair_and_semantic.py  test_cli_revise.py  test_cli_trace.py  test_cli_trace_show.py  test_compute_action_schema.py  test_compute_demo_end_to_end.py  test_compute_executor.py  test_confirmation_policy.py  test_content_extraction.py  test_coverage_grader.py  test_data_analyzer.py  test_data_reporter.py  test_dry_run.py  test_eval_graders.py  test_eval_multi_stage.py  test_eval_runner.py  test_excel_preview.py  test_executor_confirmation_policy.py  test_executor_docker_workspace.py  test_executor_workspace_injection.py  test_failure_mode_benchmark.py  test_folder_organizer_naming.py  test_folder_organizer_review.py  test_goal_cli.py  test_goal_interpreter.py  test_grounding_claims.py  test_grounding_demo.py  (+65 more)
(+46 files in other folders)
