[project]
name = "localflow-agent"
version = "0.6.2"
description = "LocalFlow Agent: Personal Automation Agent Harness"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "LocalFlow" }]
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "anthropic>=0.92",
    "pypdf>=4.0",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "matplotlib>=3.7",
]
# NOTE on the dep set above: LocalFlow's core skills (data_reporter,
# data_analyzer, pdf_indexer) eagerly import pandas / openpyxl /
# matplotlib / pypdf at module-load time, so these are pinned to the
# base install — splitting them into extras would break SkillRegistry
# bootstrap. Honest known-limitation; lazy-loading skill imports is
# tracked as future work. Use the lighter ``localflow-agent[mcp]``
# install if you only want the harness + folder_organizer.

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "openai>=1.50",
    "ruff>=0.7",
]
openai = [
    "openai>=1.50",
]
mcp = [
    "mcp>=1.6,<2.0",
]
# Meta-extra — install everything (LLM providers + MCP + dev tools) in
# one shot. Useful for full local development.
all = [
    "localflow-agent[dev]",
    "localflow-agent[openai]",
    "localflow-agent[mcp]",
]

[project.scripts]
localflow = "app.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Sensible defaults: pyflakes + pycodestyle + isort. Code already
# clean under these — verified by `ruff check .` returning 0 issues
# at Phase 7 commit time.
select = ["E", "F", "I", "W"]
ignore = [
    # Most LocalFlow modules have wide tables / aligned dict literals
    # that would be uglier wrapped to 100 chars. The line-length check
    # is informational, not enforced.
    "E501",
    # cli.py and app/mcp/server.py intentionally load .env / reconfigure
    # stdout / install signal handlers BEFORE other imports run — those
    # imports evaluate Typer Option defaults that read env vars. The
    # comments in those files document why; the lint check would force
    # an ugly refactor.
    "E402",
]
