[project]
name = "localflow-agent"
version = "0.6.3"
description = "LocalFlow Agent: Personal Automation Agent Harness"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "LocalFlow" }]
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "anthropic>=0.92",
    "pypdf>=4.0",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "matplotlib>=3.7",
]
# NOTE on the dep set above (known limitation, tracked for v0.7.0):
#
# LocalFlow's data + PDF skills eagerly import pandas / openpyxl /
# matplotlib / pypdf at module-load time via ``app/skills/__init__.py``
# wiring the SkillRegistry, so those heavy packages are pinned in the
# BASE install. Splitting them into ``[data]`` / ``[pdf]`` extras
# requires refactoring the skill loader to be lazy:
#   1. SkillRegistry only loads the manifest at startup (cheap).
#   2. The skill's planner module is imported on first ``plan()`` call.
#   3. Missing-dep on import → clear error pointing at the right extra.
# That's ~half a day of refactor + test updates; out of scope for the
# v0.6.x line. If you only need the harness + folder_organizer, you
# can omit pandas/matplotlib/pypdf from your environment and the
# folder_organizer skill still works (the others raise ImportError on
# registration today; the v0.7.0 refactor will skip them gracefully).

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "openai>=1.50",
    "ruff>=0.7",
]
openai = [
    "openai>=1.50",
]
mcp = [
    "mcp>=1.6,<2.0",
]
# Meta-extra — install everything (LLM providers + MCP + dev tools) in
# one shot. Useful for full local development.
all = [
    "localflow-agent[dev]",
    "localflow-agent[openai]",
    "localflow-agent[mcp]",
]

[project.scripts]
localflow = "app.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Sensible defaults: pyflakes + pycodestyle + isort. Code already
# clean under these — verified by `ruff check .` returning 0 issues
# at Phase 7 commit time.
select = ["E", "F", "I", "W"]
ignore = [
    # Most LocalFlow modules have wide tables / aligned dict literals
    # that would be uglier wrapped to 100 chars. The line-length check
    # is informational, not enforced.
    "E501",
    # cli.py and app/mcp/server.py intentionally load .env / reconfigure
    # stdout / install signal handlers BEFORE other imports run — those
    # imports evaluate Typer Option defaults that read env vars. The
    # comments in those files document why; the lint check would force
    # an ugly refactor.
    "E402",
]
