[project]
name = "localflow-agent"
version = "0.10.1"
description = "LocalFlow Agent: Personal Automation Agent Harness"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "LocalFlow" }]
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "anthropic>=0.92",
]
# v0.9.1 dependency split:
#
# pandas / openpyxl / matplotlib / pypdf moved out of the base install
# into the [data] and [pdf] extras. Survey of app/ in v0.9.0 confirmed
# every import of these libraries is already inside a function body
# (the comment claiming "eagerly imported at module-load time" was
# stale by Phase 6.1), so the SkillRegistry registers all skills with
# zero heavy imports — the dependencies only matter at the moment a
# skill's plan() / report() actually runs.
#
# Install matrix:
#   pip install localflow-agent             ← harness + folder_organizer
#   pip install "localflow-agent[data]"     ← + data_reporter + data_analyzer
#                                              + workspace_visualizer + agent's chart
#   pip install "localflow-agent[pdf]"      ← + pdf_indexer
#   pip install "localflow-agent[ui]"       ← + Streamlit + pandas for st.dataframe
#   pip install "localflow-agent[all]"      ← everything (dev / openai / mcp / ui / data / pdf)
#
# Skills whose required imports fail at runtime raise a clear
# ImportError pointing at the relevant extra — see chart_ops._lazy_import_matplotlib
# and the per-skill planners for the friendly messages.

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "openai>=1.50",
    "ruff>=0.7",
    # dev installs always need the same data / pdf libs because pytest
    # exercises every skill. Including them here means CI matrix only
    # needs to specify `[dev,mcp]` and still runs the full suite.
    "pandas>=2.0",
    "openpyxl>=3.1",
    "matplotlib>=3.7",
    "pypdf>=4.0",
]
openai = [
    "openai>=1.50",
]
mcp = [
    "mcp>=1.6,<2.0",
]
# Tabular data + chart rendering (data_reporter, data_analyzer,
# workspace_visualizer, and agent's chart_request post-processor).
data = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "matplotlib>=3.7",
]
# PDF text extraction (pdf_indexer + agent's PDF preview when scanning).
pdf = [
    "pypdf>=4.0",
]
# Streamlit UI also needs pandas for st.dataframe rendering on the
# Plan / Memory / Rollback pages.
ui = [
    "streamlit>=1.30,<2.0",
    "pandas>=2.0",
]
# Meta-extra — install everything (LLM providers + MCP + UI + data +
# PDF + dev tools) in one shot. Useful for full local development.
all = [
    "localflow-agent[dev]",
    "localflow-agent[openai]",
    "localflow-agent[mcp]",
    "localflow-agent[ui]",
    "localflow-agent[data]",
    "localflow-agent[pdf]",
]

[project.scripts]
localflow = "app.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Sensible defaults: pyflakes + pycodestyle + isort. Code already
# clean under these — verified by `ruff check .` returning 0 issues
# at Phase 7 commit time.
select = ["E", "F", "I", "W"]
ignore = [
    # Most LocalFlow modules have wide tables / aligned dict literals
    # that would be uglier wrapped to 100 chars. The line-length check
    # is informational, not enforced.
    "E501",
    # cli.py and app/mcp/server.py intentionally load .env / reconfigure
    # stdout / install signal handlers BEFORE other imports run — those
    # imports evaluate Typer Option defaults that read env vars. The
    # comments in those files document why; the lint check would force
    # an ugly refactor.
    "E402",
]
